--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
     "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.5.0",
