--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
     "terser-webpack-plugin": "^5.3.9",
