Add module styles. Todo add hash in prod

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
         "jsx": "react-jsx",
         "moduleResolution": "Node"
     },
+    "files": [
+        "./declaration.d.ts",
+    ],
     "include": ["./src/**/*.ts", "./src/**/*.tsx"],
 }
