--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "prod": "webpack --progress --config ./webpack.prod.js",
     "dev": "webpack serve --config ./webpack.dev.js",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-watch-cover": "jest --watch --coverage"
   },
   "repository": {
     "type": "git",
@@ -36,6 +39,7 @@
     "@storybook/react": "^7.5.1",
     "@storybook/react-webpack5": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
+    "@types/jest": "^29.5.6",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "@types/react-router-dom": "^5.3.3",
@@ -43,6 +47,8 @@
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
@@ -50,7 +56,9 @@
     "sass-loader": "^13.3.2",
     "storybook": "^7.5.1",
     "style-loader": "^3.3.3",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
