--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@storybook/react": "^7.5.1",
     "@storybook/react-webpack5": "^7.5.1",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.6",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
@@ -47,6 +49,7 @@
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
