--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,11 @@
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "jsx": "react-jsx",
+        "esModuleInterop": true,
         "moduleResolution": "Node"
     },
     "files": [
         "./declaration.d.ts",
     ],
-    "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+    "include": ["./src/**/*.ts", "./src/**/*.tsx", "./.jest/jestDom.ts"],
 }
