--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "css-loader": "^6.8.1",
     "css-modules-typescript-loader": "^4.0.1",
     "dotenv": "^16.3.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
