--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
             "@hooks/*": ["./src/hooks/*"],
             "@helpers/*": ["./src/helpers/*"],
             "@img/*": ["./src/assets/img/*"],
+            "@mocks/*": ["./src/_mocks_/*"],
             "@t/*": ["./src/types/*"],
         }
     },
