--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-storybook": "storybook build",
     "test": "jest",
     "test-watch": "jest --watch",
-    "test-watch-cover": "jest --watch --coverage"
+    "test-watch-cover": "jest --watch --coverage",
+    "test-clear": "jest --clearCache"
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
